# ReadyTrader-FOREX

./: CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  RUNBOOK.md  SECURITY.md  env.example  pyproject.toml  smithery.yaml
.github/: secret-scanning.md
app/: README.md  api_server.py  main.py
common/: cache.py  errors.py  forex_math.py  idempotency.py  rate_limiter.py
configs/: agent_zero.mcp.yaml  claude_desktop.mcp-server-config.json
core/: backtest.py  paper.py  policy.py  risk.py  stress_test.py
docs/: CUSTODY.md  ERRORS.md  EXCHANGES.md  MARKETDATA.md  POSITIONING.md  README.md  SENTIMENT.md  THREAT_MODEL.md  TOOLS.md
examples/: paper_quick_demo.py  stress_test_demo.py  verify_live_strategy.py
execution/: __init__.py  alpaca_service.py  base.py  forex_paper.py  ibkr_service.py  oanda_service.py  retail_services.py  retry.py  router.py  store.py  tradier_service.py
intelligence/: __init__.py  core.py  insights.py  learning.py  recommendations.py  regime.py  technical_analysis.py
marketdata/: __init__.py  bus.py  exchange_provider.py  plugin_examples.py  plugins.py  providers.py  store.py  synthetic.py  ws_streams.py
observability/: __init__.py  audit.py  logging.py  metrics.py  prometheus.py  webhooks.py
prompts/: READYTRADER_PROMPT_PACK.md
strategy/: marketplace.py  moving_average.py
tests/: conftest.py  test_app_structure.py  test_audit_core.py  test_audit_hashing.py  test_backtest.py  test_brokerage_executor.py  test_brokerage_retry.py  test_common_cache.py  test_common_errors.py  test_compliance.py  test_exchange_provider.py  (+18 more)
(+13 files in other folders)
