[project]
name = "readytrader-forex"
version = "0.1.0"
description = "ReadyTrader-FOREX: agent-first forex trading MCP with safety governance, backtesting, and stress testing."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 160
target-version = "py312"
extend-exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Add any specialized ignores here


